--- a/LeeLearnRAC/LeeLearnRAC/Base.lproj/Main.storyboard
+++ b/LeeLearnRAC/LeeLearnRAC/Base.lproj/Main.storyboard
@@ -30,11 +30,21 @@
                                     <action selector="btnClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6wl-wA-pwp"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WiM-jq-f1L">
+                                <rect key="frame" x="124" y="168" width="180" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.76239151999999999" green="1" blue="0.68561363880000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="logging"/>
+                                <connections>
+                                    <action selector="loginClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5uc-8j-dBT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
                         <outlet property="button" destination="7ce-6G-1Le" id="JmL-pv-5rB"/>
+                        <outlet property="loginBtn" destination="WiM-jq-f1L" id="0I7-UQ-ivK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
